[package]
name = "course-sense-stub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
color-eyre = "0.6.2"
dotenvy = "0.15.7"
env_logger = "0.11.2"
log = "0.4.20"
tokio = { version = "1.36.0", features = ["full"] }
